--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Stop Watch</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -9,12 +9,12 @@
 
 </head>
 <body>
-		<!-- Stopwatch display section -->
+		<!-- Stopwatch structure design -->
 	<div class="container">
 		<div id="stopwatch">
 			00:00:00
 		</div>
-		<!-- Stopwatch buttons- start, stop, reset -->
+		<!-- Our Stopwatch buttons- start, stop, reset -->
 		<div id="button">
 			<button onclick="startTimer()">Start</button>
 			<button onclick="stopTimer()">Stop</button>
